<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:padding="8dp"
  android:orientation="horizontal">

  <TextView
    android:id="@+id/id_tv_child_name"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:gravity="center"
    android:text="Child name"
    android:textSize="24sp"/>

  <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:orientation="vertical">

    <ImageButton
      android:id="@+id/id_remove_child"
      android:layout_width="wrap_content"
      android:layout_height="match_parent"
      android:src="@drawable/ic_delete_black_24dp" />
  </LinearLayout>

</LinearLayout>