...
        android:layout_below="@+id/button_createPlan"
        android:onClick="@{events::eventShowPlanList}"
        android:text="@string/main_list_of_plans_edit_plan" />

      <!--add/remove child-->
      <Button
        android:id="@+id/button_addRemoveChild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/button_listOfPlans"
        android:onClick="@{events::eventShowChildrenList}"
...
